syntax = "proto3";

package stellar.services.cluster.v1;

import weak "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "api/services/health/v1/health.proto";

option go_package = "github.com/ehazlett/stellar/api/services/cluster/v1;cluster";

service Cluster {
        rpc Info(InfoRequest) returns (InfoResponse);
        rpc Nodes(NodesRequest) returns (NodesResponse) {
                option (google.api.http).get = "/v1/cluster/nodes";
        };
        rpc Health(HealthRequest) returns (HealthResponse);
}

message InfoRequest {}
message InfoResponse {
        string id = 1 [(gogoproto.customname) = "ID"];
}

message NodesRequest {}

message Node {
        string id = 1 [(gogoproto.customname) = "ID"];
        string address = 2;
        map<string, string> labels = 3;
}

message NodesResponse {
        repeated Node nodes = 1;
}

message HealthRequest {}
message NodeHealth {
        Node node = 1;
        stellar.services.health.v1.NodeHealth health = 2;
}
message HealthResponse {
        repeated NodeHealth nodes = 1;
}
